--- a/README
+++ b/README
@@ -3,3 +3,13 @@ SPCPLAYER is a SNES SPC file player for linux and OS X.
 To compile:
 Linux-> make linux
 OSX  -> make osx
+
+The linux version, which was originally written in 2003, uses the old OSS methods for sound output.
+That is, it essentially writes to /dev/dsp after setting up the sound system.  If it wrote it today
+I would have used ALSA.  It was tested on Ubuntu 9.10 and the only bug I know of is you don't always get
+a successful opening of /dev/dsp the first try.  Make sure you have zlib devel installed.
+
+The OSX version is my first dip into Core Audio so the code isn't pretty, but it works and works properly.
+
+Usage on both systems:  ./spcplayer filename.spc
+
